# astro-cms

./: .dockerignore  deploy_frontend.sh  task.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routers/: galleries.py  posts.py  settings.py  uploads.py
backend/app/schemas/: gallery.py
backend/app/services/: image_service.py
frontend/: package-lock.json  package.json
frontend/src/components/: AdminApp.jsx  Footer.astro  Gallery.astro  Hero.astro  Navigation.astro  Newsletter.astro  Statement.astro
frontend/src/i18n/: ui.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: contact.astro  exhibitions.astro  gallery.astro  index.astro  philosophy.astro
frontend/src/pages/admin/: [...slug].astro
frontend/src/pages/en/: contact.astro  exhibitions.astro  gallery.astro  index.astro  philosophy.astro
frontend/src/pages/en/item/[galleryId]/: [index].astro
frontend/src/pages/item/[galleryId]/: [index].astro
frontend/src/styles/: global.css  index.css
infrastructure/astro/: .dockerignore  Dockerfile
